#pragma once
class Refresh
{
private:
    
public:
    Refresh() {}
    virtual void Actualizar() = 0;
    ~Refresh() {}
};