@startuml Tetris

class Campo {
    - piezas : Piezas
    - indNewPieza : int
    - indColorNewPieza : int
    - newPiezaColor : sf::Color
    - indX : int
    - indY : int
    - timer : int
    - limitTimer : int
    - tablero : int[][]
    - formaTablero : sf::RectangleShape[][]

    + Campo()
    + InstalarPieza() : bool
    + ActTablero() : bool
    + ActColoresTablero() : void
    + ActLimitTimer(l : int) : void
    + RotarPieza() : void
    + Right() : void
    + Left() : void
    + draw(rt : sf::RenderTarget &, rs : sf::RenderStates) const : void
    + Linea() : int
}

class InterfazUsuario {
    - font : Font
    - scoreText : Text
    - scoreTextTitle : Text
    - maxScoreTextTitle : Text
    - maxScoreText : Text
    - gameOverText : Text
    - textTETRIS : Text
    - newScoreText : Text
    - newScore : bool
    - gameOver : bool

    + InterfazUsuario()
    + SetMaxScore(int) : void
    + SetScore(int) : void
    + GameOverFunction() : void
    + NewScoreFunction() : void
    + draw(RenderTarget&, RenderStates) const : void
}

class Juego {
    - campo : Campo
    - interfazUsuario : InterfazUsuario
    - sonido : Sonidos
    - window : sf::RenderWindow*
    - heigt : int
    - width : int
    - ev : sf::Event
    - right : int
    - left : int
    - up : int
    - score : int
    - maxScore : int
    - vida : bool

    + Juego()
    + ~Juego()
    + Running() : bool
    + PollEventos() : void
    + Actualizar() : void
    + Renderizar() : void

    - iniciarVariables() : void
    - iniciarVentana() : void
}

class Pieza {
    - pieza : vector<vector<vector<bool>>>

    + Pieza()
    + ConsultarPieza(int) : vector<vector<bool>>
    + RotarPieza(int) : void
    + DesrotarPieza(int) : void
}

class Refresh {
    + Refresh()
    + virtual Actualizar() : void = 0
    + ~Refresh()
}

class Sonido {
    - musica : Music
    - lineaSonido : Sound
    - nuevoRecordSonido : Sound
    - gameOverSonido : Sound
    - lineaBuffer : SoundBuffer
    - nuevoRecordBuffer : SoundBuffer
    - gameOverBuffer : SoundBuffer

    + Sonido()
    + PlayMusic() : void
    + PauseMusic() : void
    + PlayLine() : void
    + PlayGameOver() : void
    + PlayNewScore() : void
}

Juego "1" *-- "1" Campo: campo 
Juego "1" *-- "1" InterfazUsuario: interfazUsuario 
Juego "1" *-- "4" Sonido: sonido 
Campo "1" *-- "*" Pieza: pieza
Campo "1" o-- "1" formaTablero: "sf::RectangleShape" 
Sonido "1" --> "1" Music
Sonido "1" o-- "*" SoundBuffer: "lineaBuffer, nuevoRecordBuffer, gameOverBuffer"
InterfazUsuario "1" o-- "1" Font
InterfazUsuario "1" --|> "1" Drawable

@enduml